@@ -48,6 +48,8 @@
     <jacoco.min.linecoverage>0.10</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0.10</jacoco.min.branchcoverage>
     <javaModulesSurefireArgLine>
+      --add-reads java.xml=com.azure-core-experimental
+      --add-opens com.azure.core.experimental/com.azure.core.experimental.http=com.azure.core
       --add-opens com.azure.core.experimental/com.azure.core.experimental.http=ALL-UNNAMED
       --add-opens com.azure.core.experimental/com.azure.core.experimental.models=ALL-UNNAMED
     </javaModulesSurefireArgLine>
@@ -71,6 +73,19 @@
     </dependency>
 
     <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-json</artifactId>
+      <version>1.0.0-beta.2</version> <!-- {x-version-update;com.azure:azure-json;current} -->
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-xml</artifactId>
+      <version>1.0.0-beta.2</version> <!-- {x-version-update;com.azure:azure-xml;current} -->
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>5.8.2</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter-api;external_dependency} -->
@@ -91,7 +106,7 @@
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-test</artifactId>
-      <version>3.4.22</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
+      <version>3.4.23</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
